@@ -37,6 +37,8 @@ Revision history for Perl extension PPI
 	- Moved repository to GitHub: https://github.com/adamkennedy/PPI
 
 	Details:
+	- Prevent sub names like 'v10' from being parsed as version
+	  strings (RT #74527, GitHub #65) (JAE, MOREGAN)
 	- Prevent package names like 'v10' from being parsed as version
 	  strings (GitHub #76) (MOREGAN)
 	- Prevent package names like 'x' from being parsed as operators
